--- a/metadata/layout.conf
+++ b/metadata/layout.conf
@@ -1,6 +1,6 @@
 cache-format = md5-dict
 masters =
 profile-formats = portage-2
-repo-name = jema-eclass
+repo-name = -eclass
 thin-manifests = true
 use-manifests = true
